--- a/views/index.jade
+++ b/views/index.jade
@@ -3,42 +3,25 @@ extends layout
 block content
   section.subheader.container
     | Hi there! Welcome to #{title}. This is an example page mockup.
-  // Example content
+    | Parts displayed: #{parts.length}
+  //- Example content
   section.container.productgrid
     .row
-      .product.col-md-3.col-sm-4.col-xs-12
-        img(src='images/thumbnails/arm.gif')
-        a(href='')
-          h1 Some example product
-          p This amazing arm is very amazing. It rotates over 360 degrees.
-      .product.col-md-3.col-sm-4.col-xs-12
-        img(src='images/thumbnails/beugel.gif')
-        a(href='')
-          h1 Very useful thing
-          p Another amazing thing. Slightly different. Very useful. You can change anything.
-      .product.col-md-3.col-sm-4.col-xs-12
-        img(src='images/thumbnails/bolt.gif')
-        a(href='')
-          h1 Bolt eye
-          p This amazing arm is very amazing. It rotates over 360 degrees.
-      //.clearfix.visible-sm
-      // Make sure that grid wraps properly
-      .product.col-md-3.col-sm-4.col-xs-12
-        img(src='images/thumbnails/bolteye.gif')
-        a(href='')
-          h1 Bracket
-          p This amazing arm is very amazing. It rotates over 360 degrees.
-      .clearfix
-      //.clearfix.visible-sm
-      .product.col-md-3.col-sm-4.col-xs-12
-        img(src='images/thumbnails/clamp.gif')
-        h1 Clamping that shit
-        p This amazing arm is very amazing. It rotates over 360 degrees.
-      .product.col-md-3.col-sm-4.col-xs-12
-        img(src='images/thumbnails/ering.gif')
-        h1 Very useful ering
-        p This amazing arm is very amazing. It rotates over 360 degrees.
-      .product.col-md-3.col-sm-4.col-xs-12
-        img(src='images/thumbnails/gear.gif')
-        h1 Get my gears turning
-        p This amazing arm is very amazing. It rotates over 360 degrees.
+      //- For each part in parts array
+      each part, i in parts
+        //- First take care of clearfixes to make rows horizontal
+        if (!(i % 4) && i!=0)
+          .clearfix.visible-md.visible-lg
+        else if (!(i % 3))
+          .clearfix.visible-sm
+        //- The actual product box
+        .product.col-md-3.col-sm-4.col-xs-12
+          //- Part._id is MongoDB id
+          img(src='/public/images/thumbnails/#{part._id}.gif')
+          //- Make a link to the part page
+          a(href='/part/#{part._id}')
+            h1= part.title
+            p= part.description
+          //- Print tags nicely
+          each tag in part.tags
+            span.tag= tag
