--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/public/stylesheets/style.css')
     //
       HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
       WARNING: Respond.js doesn't work if you view the page via file://
@@ -19,29 +19,27 @@ html
       // Header
       header
         h1
-          | Parametric
-          strong RC
-          | parts.com
+          a(href="/")
+            | Parametric
+            strong RC
+            | parts.com
       // Menu bar
       nav.navbar.navbar-default(role='navigation')
         .container-fluid
-          // Brand and toggle get grouped for better mobile display
-          .navbar-header
-            a.navbar-brand(href='#') Brand
-          // Collect the nav links, forms, and other content for toggling
-          #bs-example-navbar-collapse-1.collapse.navbar-collapse
-            ul.nav.navbar-nav
-              li.active
-                a(href='#') Parts
-              li
-                a(href='#') Create
-            form.navbar-form.navbar-left(role='search')
-              .form-group
-                input.form-control(type='text', placeholder='Search')
-              button.btn.btn-default(type='submit') Submit
-            ul.nav.navbar-nav.navbar-right
-              li
-                a(href='#') My Parts
+          //.navbar-header
+          //  a.navbar-brand(href='#') Brand
+          ul.nav.navbar-nav
+            li.active
+              a(href='#') Parts
+            li
+              a(href='#') Create
+          form.hidden-xs.navbar-form.navbar-left(role='search')
+            .form-group
+              input.form-control(type='text', placeholder='Search for tags')
+            button.btn.btn-default(type='submit') Submit
+          ul.nav.navbar-nav.navbar-right
+            li
+              a(href='#') My Parts
           // /.navbar-collapse
         // /.container-fluid
 
@@ -49,5 +47,6 @@ html
 
     footer
       p This is the footer.
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
-    //script(src="js/bootstrap.min.js")
+
+    block scripts
+      script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
