--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,100,200,300,500,600,700,800,900);
+/* Theme:
+http://mudcu.be/sphere/# analogous websmart
+*/
 .partRenderCanvas img {
   display: block;
   margin: 0 auto;
@@ -120,25 +123,67 @@
 	  -moz-animation: spinner2 2.5s linear infinite;
 	  animation: spinner2 2.5s linear infinite;
 	}
-/* Theme:
-http://mudcu.be/sphere/# analogous websmart
-*/
+.tags {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.tags li,
+.tags a {
+  float: left;
+  height: 24px;
+  line-height: 24px;
+  position: relative;
+  font-size: 11px;
+  margin-bottom: 5px;
+}
+.tags a {
+  margin-left: 20px;
+  padding: 0 10px 0 12px;
+  background: #0089e0;
+  text-decoration: none;
+  -moz-border-radius-bottomright: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  -moz-border-radius-topright: 4px;
+  -webkit-border-top-right-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.productgrid .product .tags a {
+  color: #fff;
+}
+.tags a:before {
+  content: "";
+  float: left;
+  position: absolute;
+  top: 0;
+  left: -12px;
+  width: 0;
+  height: 0;
+  border-color: transparent #0089e0 transparent transparent;
+  border-style: solid;
+  border-width: 12px 12px 12px 0;
+}
+.tags a:after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 0;
+  float: left;
+  width: 4px;
+  height: 4px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  background: #fff;
+  -moz-box-shadow: -1px -1px 2px #004977;
+  -webkit-box-shadow: -1px -1px 2px #004977;
+  box-shadow: -1px -1px 2px #004977;
+}
 @media (max-width: 768px) {
   .container.productgrid {
     max-width: 440px;
   }
-}
-.productgrid .product span.tag {
-  background: #eaeaea;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  padding-left: 5px;
-  padding-right: 5px;
-  margin-left: 3px;
-  margin-right: 3px;
 }
 .container {
   max-width: 970px;
