Using multiple collections. Played with sliders.
I refactored database.js to use multiple collections: one for part
metadata, one for std part mesh. Did this because it's faster: you don't
want documents in MongoDB to change size drastically. And access speed
is probably better as well if you just need to fetch one object, and not
have to discard stuff or use masks to hide stuff you don't need (like
the std mesh when loading the front page).

Played around with bootstrap-style sliders. Installed them first using
bower, but then copied the relevant css and js files into the public and
resources folder, respectively.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,7 @@ html
           a(href="/")
             | Parametric
             strong RC
-            | parts.com
+            | .com
       // Menu bar
       nav.navbar.navbar-default(role='navigation')
         .container-fluid
