Played with inserting css and js directly into HTML
Did this to lessen requests. But inserting it is really, really slow. So
I commented it out. Quite interesting to check out though.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,12 @@ html
     meta(charset='utf-8')
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
+    //- Include stylesheets directly in HTML to lessen requests (does improve download size)
+      | <style type='text/css'>
+      include ../public/stylesheets/bootstrap-3.1.1.min.css
+      include ../public/stylesheets/style.css
+      | </style>
+    //- Include stylesheets from CDN and local
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
     link(rel='stylesheet', href='/public/stylesheets/style.css')
     //
