Redesign, flat style and Open Sans, moved to LESS
It's looking much better now. I use *Open Sans* for everything, as it
looks great and better than any combination I've tried. Moved to LESS
over Stylus, more flexible and universal.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,390 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Exo+2:400,100,200,300,500,600,700,800,900);
-/* Theme:
-http://mudcu.be/sphere/# analogous websmart
-*/
-/*!
- * Slider for Bootstrap
- *
- * Copyright 2012 Stefan Petre
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- */
-.slider {
-display: inline-block;
-vertical-align: middle;
-position: relative;
-}
-.slider.slider-horizontal {
-width: 210px;
-height: 20px;
-}
-.slider.slider-horizontal .slider-track {
-height: 10px;
-width: 100%;
-margin-top: -5px;
-top: 50%;
-left: 0;
-}
-.slider.slider-horizontal .slider-selection {
-height: 100%;
-top: 0;
-bottom: 0;
-}
-.slider.slider-horizontal .slider-handle {
-margin-left: -10px;
-margin-top: -5px;
-}
-.slider.slider-horizontal .slider-handle.triangle {
-border-width: 0 10px 10px 10px;
-width: 0;
-height: 0;
-border-bottom-color: #0480be;
-margin-top: 0;
-}
-.slider.slider-vertical {
-height: 210px;
-width: 20px;
-}
-.slider.slider-vertical .slider-track {
-width: 10px;
-height: 100%;
-margin-left: -5px;
-left: 50%;
-top: 0;
-}
-.slider.slider-vertical .slider-selection {
-width: 100%;
-left: 0;
-top: 0;
-bottom: 0;
-}
-.slider.slider-vertical .slider-handle {
-margin-left: -5px;
-margin-top: -10px;
-}
-.slider.slider-vertical .slider-handle.triangle {
-border-width: 10px 0 10px 10px;
-width: 1px;
-height: 1px;
-border-left-color: #0480be;
-margin-left: 0;
-}
-.slider.slider-disabled .slider-handle {
-background-image: -webkit-gradient(linear, left 0%, left 100%, from(#dfdfdf), to(#bebebe));
-background-image: -webkit-linear-gradient(top, #dfdfdf, 0%, #bebebe, 100%);
-background-image: -moz-linear-gradient(top, #dfdfdf 0%, #bebebe 100%);
-background-image: linear-gradient(to bottom, #dfdfdf 0%, #bebebe 100%);
-background-repeat: repeat-x;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffdfdfdf', endColorstr='#ffbebebe', GradientType=0);
-}
-.slider.slider-disabled .slider-track {
-background-image: -webkit-gradient(linear, left 0%, left 100%, from(#e5e5e5), to(#e9e9e9));
-background-image: -webkit-linear-gradient(top, #e5e5e5, 0%, #e9e9e9, 100%);
-background-image: -moz-linear-gradient(top, #e5e5e5 0%, #e9e9e9 100%);
-background-image: linear-gradient(to bottom, #e5e5e5 0%, #e9e9e9 100%);
-background-repeat: repeat-x;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe5e5e5', endColorstr='#ffe9e9e9', GradientType=0);
-cursor: not-allowed;
-}
-.slider input {
-display: none;
-}
-.slider .tooltip-inner {
-white-space: nowrap;
-}
-.slider-track {
-position: absolute;
-cursor: pointer;
-background-image: -webkit-gradient(linear, left 0%, left 100%, from(#f5f5f5), to(#f9f9f9));
-background-image: -webkit-linear-gradient(top, #f5f5f5, 0%, #f9f9f9, 100%);
-background-image: -moz-linear-gradient(top, #f5f5f5 0%, #f9f9f9 100%);
-background-image: linear-gradient(to bottom, #f5f5f5 0%, #f9f9f9 100%);
-background-repeat: repeat-x;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fff9f9f9', GradientType=0);
--webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-border-radius: 4px;
-}
-.slider-selection {
-position: absolute;
-background-image: -webkit-gradient(linear, left 0%, left 100%, from(#f9f9f9), to(#f5f5f5));
-background-image: -webkit-linear-gradient(top, #f9f9f9, 0%, #f5f5f5, 100%);
-background-image: -moz-linear-gradient(top, #f9f9f9 0%, #f5f5f5 100%);
-background-image: linear-gradient(to bottom, #f9f9f9 0%, #f5f5f5 100%);
-background-repeat: repeat-x;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#fff5f5f5', GradientType=0);
--webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
-border-radius: 4px;
-}
-.slider-handle {
-position: absolute;
-width: 20px;
-height: 20px;
-background-image: -webkit-gradient(linear, left 0%, left 100%, from(#149bdf), to(#0480be));
-background-image: -webkit-linear-gradient(top, #149bdf, 0%, #0480be, 100%);
-background-image: -moz-linear-gradient(top, #149bdf 0%, #0480be 100%);
-background-image: linear-gradient(to bottom, #149bdf 0%, #0480be 100%);
-background-repeat: repeat-x;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff149bdf', endColorstr='#ff0480be', GradientType=0);
--webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-opacity: 0.8;
-border: 0px solid transparent;
-}
-.slider-handle.round {
-border-radius: 50%;
-}
-.slider-handle.triangle {
-background: transparent none;
-}
-.partRenderCanvas img {
-  display: block;
-  margin: 0 auto;
-}
-.overlay {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  float: none;
-}
-.loadinfo {
-  position: absolute;
-  color: #fff;
-  width: 100%;
-  text-align: center;
-  top: 50%;
-  margin-top: -0.5em;
-  text-shadow: 0 0 6px #000;
-}
-@-webkit-keyframes spinner1 {
-	  from {
-	    -webkit-transform: rotate(0deg);
-	  }
-
-	  to {
-	    -webkit-transform: rotate(360deg);
-	  }
-	}
-	@-moz-keyframes spinner1 {
-	  from {
-	    -moz-transform: rotate(0deg);
-	  }
-
-	  to {
-	    -moz-transform: rotate(360deg);
-	  }
-	}
-	@-o-keyframes spinner1 {
-	  from {
-	    -o-transform: rotate(0deg);
-	  }
-
-	  to {
-	    -o-transform: rotate(360deg);
-	  }
-	}
-	@keyframes spinner1 {
-	  from {
-	    transform: rotate(0deg);
-	  }
-
-	  to {
-	    transform: rotate(360deg);
-	  }
-	}
-	@-webkit-keyframes spinner2 {
-	  from {
-	    -webkit-transform: rotate(0deg);
-	  }
-
-	  to {
-	    -webkit-transform: rotate(-360deg);
-	  }
-	}
-	@-moz-keyframes spinner2 {
-	  from {
-	    -moz-transform: rotate(0deg);
-	  }
-
-	  to {
-	    -moz-transform: rotate(-360deg);
-	  }
-	}
-	@-o-keyframes spinner2 {
-	  from {
-	    -o-transform: rotate(0deg);
-	  }
-
-	  to {
-	    -o-transform: rotate(-360deg);
-	  }
-	}
-	@keyframes spinner2 {
-	  from {
-	    transform: rotate(0deg);
-	  }
-
-	  to {
-	    transform: rotate(-360deg);
-	  }
-	}
-	.spinner {
-	  position: absolute;
-	  width: 54px;
-	  height: 54px;
-	  top: 50%;
-	  left: 50%;
-	  margin-left: -27px;
-	  margin-top: -27px;
-	}
-	.spinner:after, .spinner:before {
-	  position: fixed;
-	  content: "";
-	  border: 2px solid #FFF;
-	  width: 52px;
-	  height: 52px;
-	}
-	.spinner:after {
-	  -webkit-animation: spinner1 2.5s linear infinite;
-	  -moz-animation: spinner1 2.5s linear infinite;
-	  animation: spinner1 2.5s linear infinite;
-	}
-	.spinner:before {
-	  width: 64px;
-	  height: 64px;
-	  margin-left: -6.5px;
-	  margin-top: -6.5px;
-	  -webkit-animation: spinner2 2.5s linear infinite;
-	  -moz-animation: spinner2 2.5s linear infinite;
-	  animation: spinner2 2.5s linear infinite;
-	}
-.tags {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.tags li,
-.tags a {
-  float: left;
-  height: 24px;
-  line-height: 24px;
-  position: relative;
-  font-size: 11px;
-  margin-bottom: 5px;
-}
-.tags a {
-  margin-left: 20px;
-  padding: 0 10px 0 12px;
-  background: #0089e0;
-  text-decoration: none;
-  -moz-border-radius-bottomright: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -webkit-border-top-right-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.productgrid .product .tags a {
-  color: #fff;
-}
-.tags a:before {
-  content: "";
-  float: left;
-  position: absolute;
-  top: 0;
-  left: -12px;
-  width: 0;
-  height: 0;
-  border-color: transparent #0089e0 transparent transparent;
-  border-style: solid;
-  border-width: 12px 12px 12px 0;
-}
-.tags a:after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: 0;
-  float: left;
-  width: 4px;
-  height: 4px;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
-  background: #fff;
-  -moz-box-shadow: -1px -1px 2px #004977;
-  -webkit-box-shadow: -1px -1px 2px #004977;
-  box-shadow: -1px -1px 2px #004977;
-}
-@media (max-width: 768px) {
-  .container.productgrid {
-    max-width: 440px;
-  }
-}
-.container {
-  max-width: 970px;
-}
-header {
-  padding: 0.8em;
-  padding-left: 1.6em;
-}
-header h1,
-nav {
-  font-family: 'Exo 2', sans-serif;
-  font-weight: 200;
-}
-header h1 {
-  font-size: 3.6em;
-  margin-top: 0.4em;
-  margin-bottom: 0.4em;
-}
-header h1 strong {
-  font-weight: 700;
-}
-header h1 a {
-  color: inherit;
-}
-header h1 a:hover {
-  text-decoration: none;
-  color: inherit;
-}
-nav {
-  font-weight: 700;
-  font-size: 1.2em;
-}
-.productgrid {
-  margin-top: 1.5em;
-}
-.productgrid .product {
-  padding: 1em;
-  font-family: 'Exo 2', sans-serif;
-}
-.productgrid .product h1 {
-  font-size: 2em;
-  font-weight: 700;
-  margin-top: 0.3em;
-  margin-bottom: 0.3em;
-}
-.productgrid .product a {
-  text-decoration: none;
-  color: #000;
-}
-.productgrid .product p {
-  color: #666;
-}
-.productgrid .product img {
-  max-width: 100%;
-}
-body > footer {
-  padding-top: 2em;
-  padding-bottom: 2em;
-  margin-top: 2em;
-  color: #777;
-  text-align: center;
-  border-top: 1px solid #e5e5e5;
-  background: linear-gradient(#fff, #eee);
-}
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);@media (max-width:768px){.container.productgrid{max-width:440px}}.container{max-width:970px}body{font-family:'Open Sans',sans-serif;background:url(/public/images/bgnoise.png)}.navbar-header{font:300 1.2em 'Open Sans',sans-serif}.navbar-static-top{font:300 1.6em 'Open Sans',sans-serif}.productgrid .product h1{font:300 2.4em 'Open Sans',sans-serif;margin-top:0;margin-bottom:0}.productgrid .product a{text-decoration:none}.productgrid .product p{font:300 1em 'Open Sans',sans-serif;color:#666}.productgrid .label{margin-left:.2em;margin-right:.2em}body>footer{text-align:center;border-top:1px solid #e7e7e7;padding-top:2em;padding-bottom:2em;margin-top:2em;margin-bottom:2em;color:#777;background-color:#f4f4f4}
