--- a/views/index.jade
+++ b/views/index.jade
@@ -19,13 +19,17 @@ block content
           .clearfix.visible-sm
         //- The actual product box
         .product.col-md-3.col-sm-4.col-xs-12
-          //- Part._id is MongoDB id
-          img.img-responsive(src='/public/images/thumbnails/#{part._id}.gif')
-          //- Make a link to the part page
-          a(href='/part/#{part._id}')
-            h1= part.title
-            p.description= part.description
-          //- Print tags nicely
-          div
-            each tag in part.tags
-              span.label.label-info= tag
+          //- Thumbnail makes for a nice box
+          .thumbnail
+            //- Part._id is MongoDB id
+            img.img-responsive(src='/public/images/thumbnails/#{part._id}.gif')
+            //- Wrap in div to be able to set padding easily
+            .caption
+              //- Make a link to the part page
+              a(href='/part/#{part._id}')
+                h1= part.title
+                p.description= part.description
+              //- Print tags nicely
+              div
+                each tag in part.tags
+                  span.label.label-info= tag
